--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port %PORT%",
+    "startManual": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -29,6 +30,7 @@
     "@angular/material": "^20.0.5",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@microsoft/signalr": "^9.0.6",
     "@tailwindcss/postcss": "^4.1.11",
     "ng-openapi-gen": "^0.53.0",
     "postcss": "^8.5.6",
